样例登陆逻辑新增细化点

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.security.auth.jwt.secret.key=C*F-JaNdRgUkXn2r5u8x/A?D(G+KbPeShVmYq3s6v9y$
 spring.security.auth.token.header=Authorization
 spring.security.auth.token.prefix=Bearer 
 spring.security.auth.token.type=JWT
+#登陆谁允许失败的次数
+spring.security.login.allow.failed.num=5
